@@ -1,0 +1,45 @@
+<?xml version="1.0" ?>
+<!--
+ Licensed to the Apache Software Foundation (ASF) under one or more
+ contributor license agreements.  See the NOTICE file distributed with
+ this work for additional information regarding copyright ownership.
+ The ASF licenses this file to You under the Apache License, Version 2.0
+ (the "License"); you may not use this file except in compliance with
+ the License.  You may obtain a copy of the License at
+
+     http://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+-->
+
+<schema name="bad-schema-sweetspot-partial-norms" version="1.0">
+  <types>
+
+    <fieldType name="string" class="solr.StrField" />
+
+    <fieldType name="bad_ss_ft" class="solr.TextField"
+               indexed="true" stored="false">
+      <analyzer class="org.apache.lucene.analysis.standard.StandardAnalyzer"/>
+      <similarity class="solr.SweetSpotSimilarityFactory">
+        <!-- BAD: missing a norm setting -->
+        <int name="lengthNormMin">3</int>
+        <!-- <int name="lengthNormMax">5</int> -->
+        <float name="lengthNormSteepness">0.5</float>
+      </similarity>
+    </fieldType>
+  </types>
+
+
+ <fields>
+   <field name="id" type="string" indexed="true" stored="true" multiValued="false" required="false"/>
+   
+ </fields>
+
+ <defaultSearchField>id</defaultSearchField>
+ <uniqueKey>id</uniqueKey>
+
+</schema>
