@@ -1,0 +1,76 @@
+<?xml version="1.0" ?>
+<!--
+ Licensed to the Apache Software Foundation (ASF) under one or more
+ contributor license agreements.  See the NOTICE file distributed with
+ this work for additional information regarding copyright ownership.
+ The ASF licenses this file to You under the Apache License, Version 2.0
+ (the "License"); you may not use this file except in compliance with
+ the License.  You may obtain a copy of the License at
+
+     http://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+-->
+
+<!-- Test schema file for SweetSpotSimilarityFactory -->
+
+<schema name="test" version="1.0">
+  <types>
+    <fieldType name="int" class="solr.TrieIntField" precisionStep="0" omitNorms="true" positionIncrementGap="0"/>
+    
+    <!-- default parameters -->
+    <fieldType name="text" class="solr.TextField"
+               indexed="true" stored="false">
+      <analyzer class="org.apache.lucene.analysis.standard.StandardAnalyzer"/>
+      <similarity class="solr.SweetSpotSimilarityFactory"/>
+    </fieldType>
+    
+    <!-- using baseline TF -->
+    <fieldType name="text_baseline" class="solr.TextField"
+               indexed="true" stored="false">
+      <analyzer class="org.apache.lucene.analysis.standard.StandardAnalyzer"/>
+      <similarity class="solr.SweetSpotSimilarityFactory">
+        <!-- TF -->
+        <float name="baselineTfMin">6.0</float>
+        <float name="baselineTfBase">1.5</float>
+        <!-- plateau norm -->
+        <int name="lengthNormMin">3</int>
+        <int name="lengthNormMax">5</int>
+        <float name="lengthNormSteepness">0.5</float>
+      </similarity>
+    </fieldType>
+   
+    <!-- using hyperbolic TF -->
+    <fieldType name="text_hyperbolic" class="solr.TextField"
+               indexed="true" stored="false" >
+      <analyzer class="org.apache.lucene.analysis.standard.StandardAnalyzer"/>
+      <similarity class="solr.SweetSpotSimilarityFactory">
+        <float name="hyperbolicTfMin">3.3</float>
+        <float name="hyperbolicTfMax">7.7</float>
+        <double name="hyperbolicTfBase">2.718281828459045</double> <!-- e -->
+        <float name="hyperbolicTfOffset">5.0</float>
+        <!-- plateau norm, shallower slope -->
+        <int name="lengthNormMin">1</int>
+        <int name="lengthNormMax">5</int>
+        <float name="lengthNormSteepness">0.2</float>
+      </similarity>
+    </fieldType>
+   
+  </types>
+
+  <fields>
+    <field name="id" type="int" indexed="true" stored="true" multiValued="false" required="false"/>
+    <field name="text"            type="text" />
+    <field name="text_baseline"   type="text_baseline" />
+    <field name="text_hyperbolic" type="text_hyperbolic" />
+  </fields>
+
+  <defaultSearchField>text</defaultSearchField>
+  <uniqueKey>id</uniqueKey>
+  
+  <similarity class="solr.SchemaSimilarityFactory"/>
+</schema>
